--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,4 +18,7 @@ jobs:
       - name: devcard
         uses: dailydotdev/action-devcard@3.0.0
         with:
-          devcard_id: e6xN2NmaRgh93jto0yBWt
+          user_id: e6xN2NmaRgh93jto0yBWt
+          commit_branch: devcard
+          commit_filename: devcard.png
+          commit_message: "chore: update ${filename}"
